<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo2"
    tools:context="com.example.joselito.senaprueba.barcodereader.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/barcode_header"
        android:id="@+id/status_message"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="12pt"
        android:textColor="#dd1e12"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/status_message"
        android:id="@+id/barcode_value"
        android:fontFamily="casual"
        android:textColor="#dd1e12"
        android:textStyle="bold"
        android:layout_above="@+id/auto_focus"
        android:layout_below="@+id/status_message" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:id="@+id/auto_focus"
        android:fontFamily="casual"
        android:textColor="#dd1e12"
        android:textStyle="bold"
        android:buttonTint="#dd1e12"
        android:textSize="8pt"
        android:checked="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:textStyle="bold"
        android:id="@+id/use_flash"
        android:textColor="#dd1e12"
        android:fontFamily="casual"
        android:textSize="8pt"
        android:layout_below="@+id/auto_focus"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_barcode"
        android:textStyle="bold"
        android:id="@+id/read_barcode"
        android:fontFamily="casual"
        android:textColor="#dd1e12"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/busqueda"
        android:text="@string/Buscar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="#dd1e12"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/read_barcode" />

</RelativeLayout>
