<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_escaner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondoapp"
    tools:context="com.example.joselito.senaprueba.ventana_ini">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NombreAPP"
        android:id="@+id/NombreAPP"
        android:textSize="42pt"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="137dp" />

    <TextView
        android:text="@string/Subnombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:textColor="#fee99a"
        android:textStyle="bold"
        android:id="@+id/Subnombre"
        android:fontFamily=""
        android:textAlignment="center"
        android:layout_below="@+id/NombreAPP"
        android:layout_alignStart="@+id/NombreAPP" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonempezar"
        android:id="@+id/boton_empezar"
        android:textColor="#fee99a"
        android:textStyle="bold"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/Subnombre"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="79dp" />

</RelativeLayout>
